--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/navbar.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -31,6 +32,18 @@
       </span>
       
     </nav>
+    
+    <header class="header">
+      <!-- <br><br><br><br><br><br><br><br> -->
+      <div class="header-image">
+          <img src="/images/profile-hex.png"> 
+      </div>
+      <br>
+      <div class="header-name">
+          <span>Osagie <strong>Omoruyi</strong></span>
+      </div>
+  </header>
+  
 
     <!-- Page-specific (main) content here -->
     <main class="container"></main>
