--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+
   </head>
 
   <body>
@@ -55,7 +57,8 @@
           <textarea name="text" id="tweet-text" placeholder="Type your tweet here"></textarea>
           <div class="button_counter_section">
             <button type="submit" class="tweet-submit-button">Tweet</button>
-            <output name="counter" class="counter" for="tweet-text">140</output>
+            <!-- <output name="counter" class="counter" id="counter" for="tweet-text">140</output> -->
+            <span id="counter">140</span>
           </div>
         </form>
       </section>
