completed the character counter logic and styling

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
           <div class="button_counter_section">
             <button type="submit" class="tweet-submit-button">Tweet</button>
             <!-- <output name="counter" class="counter" id="counter" for="tweet-text">140</output> -->
-            <span id="counter">140</span>
+            <span class = "black" id="counter">140</span>
           </div>
         </form>
       </section>
